--- a/trunk/Empresa/Circuitos/Compras/Compra-de-materiales-y-entrada-de-inventario.tex
+++ b/trunk/Empresa/Circuitos/Compras/Compra-de-materiales-y-entrada-de-inventario.tex
@@ -26,58 +26,78 @@
 \section{Formularios de Compras}
 \subsection{Orden de Compra}
 \begin{center}
- \includegraphics[scale=1.6,keepaspectratio=true]{./Images/FormulariosIEP/Orden-de-Compra.png}
+ \includegraphics[scale=3.2, keepaspectratio=true]{./Images/FormulariosIEP/Orden-de-Compra.png}
  % Orden-de-Compra.png: 750x1002 pixel, 96dpi
 \end{center}
 \begin{itemize}
   \item \textbf{Objetivo:} Mediante este documento se comunica al proveedor la decisión de realizar una compra de materiales. Se especifican los productos a comprar con detalle de precios, cantidades, impuestos y condiciones de pago acordes a la previa cotización del proveedor.
-  \item \textbf{Alcance:} Es un documento entre la empresa y su proveedor.
-  \item \textbf{Emisor:} Compras
-  \item \textbf{Cantidad de Copias Emitidas:} Original y 4 copias
-  \item \textbf{Sector receptor:} Dirección General para su autorización y envío al proveedor
+  \item \textbf{Alcance:} Es un documento externo, entre la empresa y su proveedor.
+  \item \textbf{Emisor:} Compras.
+  \item \textbf{Cantidad de Copias Emitidas:} Original y cuatro copias.
+  \item \textbf{Sector receptor:} Original a Dirección General para su autorización; primera copia a Recepci\'on; segunda copia a Finanzas; tercera copia a Control de Calidad; y la \'ultima copia a Compras.
  \end{itemize}
 \subsubsection{Descripci\'on campos de la Orden de Compra}
 \begin{enumerate}
-  \item Empresa emisora: Raz\'on Social de la empresa
-  \item Empresa emisora: Informaci\'on de Sucursal. Domicilio y N\'umero de Tel\'efono
-  \item Empresa emisora: Responsabilidad frente al IVA
-  \item Número de Orden de Compra
-  \item Fecha de emisi\'on
-  \item Empresa emisora: CUIT y C\'odigo de Ingresos Brutos
-  \item Proveedor: Raz\'on Social 
-  \item Proveedor: Domicilio
-  \item Proveedor: Responsabilidad frente al IVA
-  \item Condici\'on de pago
-  \item C\'odigo del proveedor al que se le compra
-  \item Proveedor: CUIT
-  \item Detalle de la Orden de Compra: C\'odigo del proveedor del \'item, Cantidad solicitada
-  \item Detalle de la Orden de Compra: Descripci\'on del \'item
-  \item Detalle de la Orden de Compra: Precio unitario del \'item
-  \item Detalle de la Orden de Compra: Importe total del \'item (cantidad * precio unitario)
-  \item Detalle de la Orden de Compra: Fecha de entrega del \'item
-  \item Detalle de la Orden de Compra: Subtotal de items (suma de los totales de \'item)
-  \item Resumen de la Orden de Compra: Subtotal de items (suma de los totales de \'item)
-  \item Resumen de la Orden de Compra: Importe de impuestos que aplican (opcional)
-  \item Resumen de la Orden de Compra: Subtotal después de impuestos (sólo si aplica impuestos)
-  \item Resumen de la Orden de Compra: Gravamen de IVA para Inscriptos
-  \item Resumen de la Orden de Compra: Gravamen de IVA para No Inscriptos
-  \item Resumen de la Orden de Compra: Total después de IVA
-  \item Importe Total de la Orden de Compra
-  \item Importe Total de la Orden de Compra en letras
-  \item Fecha de Vencimiento de la Orden de Compra
-  \item Términos de confirmación de aprobación o rechazo
+  \item Empresa emisora: Raz\'on Social de la empresa.
+  \item Empresa emisora: Informaci\'on de Sucursal. Domicilio y N\'umero de Tel\'efono.
+  \item Empresa emisora: Responsabilidad frente al IVA.
+  \item Número de Orden de Compra.
+  \item Fecha de emisi\'on.
+  \item Empresa emisora: CUIT y C\'odigo de Ingresos Brutos.
+  \item Proveedor: Raz\'on Social.
+  \item Proveedor: Domicilio.
+  \item Proveedor: Responsabilidad frente al IVA.
+  \item Condici\'on de pago.
+  \item C\'odigo del proveedor al que se le compra.
+  \item Proveedor: CUIT.
+  \item Detalle de la Orden de Compra: C\'odigo del proveedor del \'item.
+  \item Detalle de la Orden de Compra: Cantidad solicitada.
+  \item Detalle de la Orden de Compra: Descripci\'on del \'item.
+  \item Detalle de la Orden de Compra: Precio unitario del \'item.
+  \item Detalle de la Orden de Compra: Importe total del \'item (cantidad * precio unitario).
+  \item Detalle de la Orden de Compra: Fecha de entrega del \'item.
+  \item Detalle de la Orden de Compra: Subtotal de items (suma de los totales de \'item).
+  \item Resumen de la Orden de Compra: Subtotal de items (suma de los totales de \'item).
+  \item Resumen de la Orden de Compra: Importe de impuestos que aplican (opcional).
+  \item Resumen de la Orden de Compra: Subtotal después de impuestos (sólo si aplica impuestos).
+  \item Resumen de la Orden de Compra: Gravamen de IVA para Inscriptos.
+  \item Resumen de la Orden de Compra: Gravamen de IVA para No Inscriptos.
+  \item Resumen de la Orden de Compra: Total después de IVA.
+  \item Importe Total de la Orden de Compra.
+  \item Importe Total de la Orden de Compra en letras.
+  \item Fecha de Vencimiento de la Orden de Compra.
+  \item Términos de confirmación de aprobación o rechazo.
 \end{enumerate}
 
-\subsection{Formulario2}
-imagen
+\pagebreak
+\subsection{Requerimiento de Compra}
+\begin{center}
+ \includegraphics{Images/FormulariosIEP/Requerimiento-de-Compra.png}
+ % Requerimiento-de-Compra.png: 493x299 pixel, 96dpi, 13.04x7.91 cm, bb=0 0 370 224
+\end{center}
+
 \begin{itemize}
-  \item \textbf{Objetivo:}
-  \item \textbf{Alcance:}
-  \item \textbf{Emisor:}
-  \item \textbf{Cantidad de Copias Emitidas:}
-  \item \textbf{Sector receptor:}
+  \item \textbf{Objetivo:} Un Requerimiento de Compra es un pedido interno entre sectores, para que el responsable de compras provea de algún elemento que un sector necesita.
+  \item \textbf{Alcance:} Documento interno de la empresa.
+  \item \textbf{Emisor:} Almacenes.
+  \item \textbf{Cantidad de Copias Emitidas:} Original y copia.
+  \item \textbf{Sector receptor:} Original a Compras; y la copia para Almacenes.
  \end{itemize}
-\subsubsection{Descripci\'on campos del Formulario2}
+\subsubsection{Descripci\'on campos del Requerimiento de Compra}
+\begin{enumerate}
+ \item Logo de la empresa.
+ \item Nombre del formulario.
+ \item N\'umero del Requerimiento de Compra.
+ \item Departamento que solicita la Compra.
+ \item Fecha en la que se realiza el Requerimiento de Compra.
+ \item Fecha en la que se necesita los art\'iculos solicitados.
+ \item Cantidad solicitada de un art\'iculo.
+ \item Unidad de medida de un art\'iculo.
+ \item Descripci\'on de un art\'iculo deseado.
+ \item N\'umero del proveedor preferido (opcional).
+ \item Firma del emisor.
+\end{enumerate}
+
 
 \pagebreak
 \section{Normas de Control Interno de Compras}
